# maker

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
maker-util/: README.md  maker-util.sh
server/: .gitignore  Cargo.toml  clippy.toml  dockerfile  rustfmt.toml
server/src/: error.rs  main.rs  router.rs  server.rs  service.rs
server/src/router/: create.rs  models.rs  specs.rs
server/src/service/: .rs  http.rs  macros.rs  middlewares.rs
server/src/service/middlewares/: tower.rs
server/src/service/middlewares/tower/: conditional_impl.rs  httperr.rs  limit.rs  timeout.rs
server/src/service/specification/: prompt.rs
