[package]
name = "server"
version = "1.0.0"
edition = "2024"

[dependencies]
always_send = "0.1.1"
futures-macro = "0.3.32"
futures-util = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.20", features = [
  "http1",
  "server-graceful",
  "service",
  "tokio"
] }
pin-project-lite = "0.2.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal"] }
toml = "1.1.2"
tower = { version = "0.5.3", features = ["buffer", "limit", "timeout", "tracing", "util"] }
tower-http = { version = "0.6.8", features = ["trace", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
